# nabaztag-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.example.yaml  intents.example.yaml  moods.yaml  pyproject.toml
.github/workflows/: ci.yml
brain/: pyproject.toml
brain/rabbit_brain/: __init__.py  runtime.py
brain/rabbit_brain/audio/: __init__.py  beep.py  capture.py  demo.py  doa.py  pipeline.py  vad.py  wake.py
brain/rabbit_brain/body/: __init__.py  adapter.py  chor.py  controller.py  demo.py  events_server.py  mock_ojn.py  ojn_adapter.py  types.py
brain/rabbit_brain/llm/: __init__.py  agent.py  base.py  openai_provider.py  smoke.py  tools.py
brain/rabbit_brain/stt/: __init__.py  base.py  deepgram.py  fallback.py  flux.py  local_whisper.py  openai_whisper.py
brain/rabbit_brain/tts/: __init__.py  base.py  deepgram_tts.py  elevenlabs_tts.py  factory.py  mp3_server.py  piper_tts.py  speaker.py
brain/scripts/: config-doctor.py  install-audio.sh  llm-bench.py  mp3-progressive-probe.py  train-wake-word.sh  tts-bench.py
brain/scripts/wake-training/: Dockerfile
brain/udev/: 70-respeaker-flex.rules
deploy/: install-runtime.sh  nabaztag-recovery.service  nabaztag-runtime.service  rabbit_recovery.py
docs/: ARCHITECTURE.md  OJN_API_NOTES.md
mcp/: README.md  pyproject.toml
mcp/nabaztag_mcp/: __init__.py  server.py
ojn/: deploy.sh
ojn/apache/: brain-audio.conf.example  mp3-probe.conf.example  ojn-vhost.conf.example
ojn/docker/: Dockerfile  entrypoint.sh  nabaztag-ojn.service.example  openjabnab.ini.example
ojn/docker/patches/: netdump.cpp
ojn/network/: NetworkManager-unmanaged.conf.example  dnsmasq.conf.example  hostapd.conf.example  nabaztag-ap-interface.service.example  nabaztag-dnsmasq.service.example  nabaztag-firewall.service.example  nftables-rabbit.conf.example
ojn/piper/: install-piper.sh
ojn/plugin_events/: README.md  events.pro  plugin_events.cpp  plugin_events.h
prompts/: system.md
tests/: conftest.py  test_agent.py  test_audio_capture.py  test_config_doctor.py  test_controller.py  test_doa.py  test_events_server.py  test_install_piper.py  test_install_runtime.py  test_llm_bench.py  test_llm_provider.py  test_mp3_probe.py  test_ojn_adapter.py  test_pipeline.py  test_rabbit_recovery.py  test_runtime.py  test_stt.py  test_tools.py  test_train_wake_word.py  test_tts.py  test_tts_bench.py  test_vad.py
