[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbit-brain"
version = "0.1.0"
description = "AI brain for the original Nabaztag rabbit (nabaztag-ai project)"
license = { text = "Apache-2.0" }
authors = [{ name = "Maurizio Caporali" }]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "mutagen>=1.47",
    "openai>=1.40",
]

[project.optional-dependencies]
# Audio-in pipeline on the Bolt (capture, wake word, VAD, DoA). Kept out of
# the base deps so CI and the Mac dev env never pull ALSA/onnx wheels.
# NOTE: openwakeword is deliberately NOT listed — on Linux it hard-depends on
# tflite-runtime, which has no CPython 3.12 wheel, while we only use its ONNX
# backend. Install with brain/scripts/install-audio.sh, which adds
# openwakeword --no-deps on top of this extra (its declared runtime deps
# minus tflite-runtime are carried here so nothing is silently missing).
audio = [
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "onnxruntime>=1.10,<2",
    "tqdm>=4.0,<5",
    "scipy>=1.3,<2",
    "scikit-learn>=1,<2",
    "requests>=2.0,<3",
    "pysilero-vad>=2.0",
    "pyusb>=1.2",
]
# stt_profile: local (faster-whisper on the Bolt CPU)
stt-local = [
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.11",
    "pre-commit>=3.6",
]

[tool.setuptools.packages.find]
include = ["rabbit_brain*"]

