[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nabaztag-mcp"
version = "0.1.0"
description = "MCP server exposing the Nabaztag rabbit to Claude Desktop / Claude Code"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "rabbit-brain",
]

[project.scripts]
nabaztag-mcp = "nabaztag_mcp.server:main"

[tool.setuptools.packages.find]
include = ["nabaztag_mcp*"]
